--- a/client/app/auth/signup.html
+++ b/client/app/auth/signup.html
@@ -8,6 +8,8 @@
 		    <input type='email' ng-model='user.email' required>
 		    Phone:
 		    <input type='tel' minlength=10 maxlength=10 ng-model='user.phone' required>
+		    Password:
+		    <input type='password' minlength=10 maxlength=10 ng-model='user.password' required>
 		    <br>
 		    	<!-- radio buttons for users to choose how to receive confirmation code  -->
 		    <!-- <input type="radio" value="phone" ng-model='smsConfirmation'>Receive confirmation code via Text
