--- a/client/app/auth/signin.html
+++ b/client/app/auth/signin.html
@@ -2,10 +2,10 @@
   <div class='row'>
   	  <h1>Sign In</h1>
   		  <form name="signinForm" ng-submit='signin()'>
-  		  	Username
-  		    <input type='text'ng-model='user.username' required>
-  		   	Phone:
-		    <input type='tel' minlength=10 maxlength=10 ng-model='user.phone'required>
+        Phone:
+        <input type='tel' minlength=10 maxlength=10 ng-model='user.phone'required>
+		  	Password:
+		    <input type='password'ng-model='user.password' required>
   		    <button class='btn btn-default'>signin</button>
   		  </form>
   	</div>
