--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,6 @@
 
 		<title>GUACAMOLE!</title>
 
-
 	</head>
 	<body>
 		<!-- nav bar. controller is BoundlessController  -->
@@ -38,7 +37,8 @@
 		  <div class="container">
 		    <div class="navbar-header">
 		      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-		        <span class="sr-only">Toggle navigation</span>
+		        <!-- screen reader for span -->
+		        <span class="sr-only"></span>
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
 		        <span class="icon-bar"></span>
@@ -49,12 +49,6 @@
 		    <!-- collapsed navbar if screen size is too narrow -->
 		    <div id="navbar" class="navbar-collapse collapse">
 		      <form class="navbar-form navbar-right">
-		        <!-- <div class="form-group">
-		          <input type="text" placeholder="Email" class="form-control">
-		        </div>
-		        <div class="form-group">
-		          <input type="password" placeholder="Password" class="form-control">
-		        </div> -->
 		        <button type="submit" ng-click=go('/groups') class="btn btn-success">All Groups</button>
 		        <button type="submit" ng-click=go('/usergroups') class="btn btn-success">My Groups</button>
 		        <button type="submit" ng-click=go('/newgroup') class="btn btn-success">Create Group</button>
