--- a/ionic/myApp/www/index.html
+++ b/ionic/myApp/www/index.html
@@ -26,7 +26,7 @@
     <script src='js/app/services/services.js'></script>
   </head>
 
-  <body ng-app="starter">
+  <body ng-app="boundless">
     <ion-nav-view></ion-nav-view>
   </body>
 </html>
