--- a/ionic/myApp/www/index.html
+++ b/ionic/myApp/www/index.html
@@ -21,7 +21,7 @@
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
-    <script src='js/app/auth/auth.js'></script>
+    <!-- <script src='js/app/auth/auth.js'></script> -->
     <script src='js/app/groups/groups.js'></script>
     <script src='js/app/services/services.js'></script>
   </head>   
