--- a/ionic/myApp/www/index.html
+++ b/ionic/myApp/www/index.html
@@ -12,18 +12,27 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
+    
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <!-- inject:css -->
+    <link rel="stylesheet" href="css/style.css">
+    <!-- endinject -->
+
+    <!-- inject:js -->
+    <script src="js/app.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/app/groups/allGroups.js"></script>
+    <script src="js/app/groups/createGroup.js"></script>
+    <script src="js/app/groups/myGroupDetails.js"></script>
+    <script src="js/app/groups/myGroups.js"></script>
+    <script src="js/app/groups/nearbyGroups.js"></script>
+    <script src="js/app/services/services.js"></script>
+    <!-- endinject -->
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
 
-    <!-- your app's js -->
-    <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
-    <!-- <script src='js/app/auth/auth.js'></script> -->
-    <script src='js/app/groups/groups.js'></script>
-    <script src='js/app/services/services.js'></script>
   </head>   
 
   <body ng-app="boundless">
